--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/postcss": "^4.0.6",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "postcss": "^8.5.2",
