--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.0.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17"
   }
