--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.0",
+    "react-modal": "^3.16.3",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
