Add image generation for recipe, error handling, loading state for generate recipe button

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/postcss": "^4.0.6",
     "dotenv": "^16.4.7",
     "next": "15.1.7",
+    "openai": "^4.86.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.0",
