--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
     "@tailwindcss/postcss": "^4.0.6",
+    "antd": "^5.24.2",
     "dotenv": "^16.4.7",
     "next": "15.1.7",
     "openai": "^4.86.1",
